# frontend-fliperama

./: .env  .gitignore  bash.exe.stackdump  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml
coverage/: index.html
coverage/services/: index.html  reconcile.ts.html  uploadRules.ts.html
coverage/services/payment/: index.html  types.ts.html
e2e/: smoke.spec.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: App.tsx
src/app/routers/: AppRoutes.tsx
src/components/: Splash.tsx
src/components/dialog/: Dialog.tsx  useConfirmDialog.tsx
src/components/spinner/: Spinner.tsx
src/components/ui/: Button.tsx  Input.tsx  Select.tsx  Textarea.tsx  field.ts  index.ts
src/features/admin/: AdminApp.tsx  (+4 more)
src/hooks/: useGamepadNavigation.ts  useIdle.ts  useTotemCursor.ts
src/lib/: mergeClasses.ts
src/services/: adminAuth.ts  attractService.ts  emulatorInput.ts  emulatorLauncher.ts  fs.ts  gameUpload.ts  gamepad.ts  hyperspinGamesService.ts  hyperspinPlatformThemesService.ts  hyperspinThemeArchiveService.ts  hyperspinThemeService.ts  iniConfig.ts  mameRoute.ts  path.ts  pathUtils.test.ts  pathUtils.ts  platformCatalog.ts  platformRuntimeConfig.ts  platforms.ts  reconcile.test.ts  reconcile.ts  remoteHost.ts  reports.ts  romLibrary.ts  runtimeConfig.ts  saves.ts  scraperService.ts  sha256.test.ts  sha256.ts  uploadRules.test.ts  uploadRules.ts  xinputMapping.test.ts  xinputMapping.ts
(+47 files in other folders)
