[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Iuri Vilarinho"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

tauri = { version = "2.10.0", features = ["protocol-asset", "tray-icon"] }

tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# Servidor HTTP embarcado para acesso remoto ao painel admin pela rede.
tiny_http = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }

windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading"
] }
